base/metabase-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-db
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase-db
  template:
    metadata:
      labels:
        app: metabase-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/pgdata
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: metabase-db-pvc
