base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-db
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase-db
  template:
    metadata:
      labels:
        app: metabase-db
    spec:
      containers:
        - name: postgres
          image: postgres:14
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: metabase-db-pvc
