base/metabase-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-db
  namespace: metabase
spec:
  selector:
    app: metabase-db
  ports:
    - port: 5432
      targetPort: 5432
