base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-db
  namespace: metabase
spec:
  ports:
    - port: 5432
  selector:
    app: metabase-db
