base/metabase-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: metabase
  namespace: metabase
spec:
  to:
    kind: Service
    name: metabase
  port:
    targetPort: 3000
  tls:
    termination: edge
